# erdscope

./: .gitignore  CHANGELOG.md  LICENSE  README.ja.md  README.md  SECURITY.md  erd.py  erdscope.example.yml  excel-template.xlsx  gen_excel_template.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  release.yml
benchmarks/: gen_schema.py  run_bench.py
docs/: gen_demo.py  gen_shots.py  index.html  manual.html  manual.ja.html  recipes.html  recipes.ja.html
examples/: README.md  build_demo_db.py  demo_shop.db  schema-only.json
examples/showcase/: README.md  generate.py
examples/showcase/input/: models.py  presentation.json  schema.json  showcase.db
openwiki/: .last-update.json  operations-and-testing.md  quickstart.md
openwiki/architecture/: overview.md  source-map.md
openwiki/domain/: schema-merge.md
openwiki/workflows/: engineering.md
src/erdscope/: adapters.py  cli.py  config.py  core.py  dbml.py  demo.py  diff.py  digest.py  emit.py  exporters.py  header.py  ir.py  merge.py  mermaid.py  overlays.py  plantuml.py  providers.py  rails_schema.py  sources.py  viewer.html
src/erdscope/db/: base.py  mysql.py  postgres.py  sqlite.py
src/erdscope/frameworks/: base.py  django.py  laravel.py  prisma.py  rails.py  sqlalchemy.py
tests/: test_build.py  test_characterization.py  test_cli_help.py  test_config_validation.py  test_db_integration.py  test_dbml_input.py  test_demo.py  test_diff.py  test_e2e.py  test_emit_config.py  test_emit_dbml.py  test_emit_digest.py  test_emit_json.py  test_emit_mermaid.py  test_emit_plantuml.py  test_erd.py  test_excel_notes_groups.py  test_golden_format1.py  test_groups.py  test_merge_ir.py  test_mermaid_input.py  test_notes.py  test_pipeline.py  test_provider_contract.py  test_rails_schema.py  test_showcase.py  test_sqlalchemy_provider.py  test_version.py
tests/fixture_app/db/: schema.rb
tests/fixture_contract/dbml/: schema.dbml
tests/fixture_contract/django/: manage.py
tests/fixture_contract/laravel/: Post.php
tests/fixture_contract/mermaid_er/: schema.mmd
tests/fixture_contract/prisma/: schema.prisma
tests/fixture_contract/rails/: post.rb  user.rb
tests/fixture_contract/rails_schema/: schema.rb
tests/fixture_contract/sqlalchemy/: models.py
tests/fixture_db/: demo_mysql.sql  demo_postgres.sql
tests/fixture_django/: manage.py
tests/fixture_django/blog/: models.py
tests/fixture_django_advanced/: manage.py
tests/fixture_laravel/: Comment.php  DynamicTarget.php  Gadget.php  Helper.php  Post.php  RenamedWidget.php  Tag.php  User.php  Video.php
tests/fixture_prisma/: schema.prisma
tests/fixture_prisma_advanced/: schema.prisma
tests/fixture_sqlalchemy/: base.py  models.py
tests/fixtures/: format1_golden.json
tools/: build_single_file.py
(+41 files in other folders)
