[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "erdscope"
version = "0.1.0"
description = "Interactive, self-contained ER-diagram HTML and Excel table definitions from a live MySQL database — single file, zero required dependencies"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
authors = [{ name = "tas6" }]
keywords = ["erd", "er-diagram", "database", "schema", "mysql", "rails", "prisma", "django", "documentation"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Topic :: Database",
  "Topic :: Documentation",
  "Topic :: Software Development :: Documentation",
]

[project.optional-dependencies]
mysql = ["PyMySQL"]
yaml = ["PyYAML"]
all = ["PyMySQL", "PyYAML"]

[project.scripts]
erdscope = "erd:main"

[project.urls]
Homepage = "https://github.com/orapli/erdscope"
Documentation = "https://orapli.github.io/erdscope/manual.html"
"Live demo" = "https://orapli.github.io/erdscope/"
Repository = "https://github.com/orapli/erdscope"
Issues = "https://github.com/orapli/erdscope/issues"

[tool.setuptools]
py-modules = ["erd"]
