[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "erdscope"
version = "0.10.0"
description = "Interactive, self-contained ER-diagram HTML and Excel table definitions from a MySQL, PostgreSQL, or SQLite database and/or application code (Rails / Prisma / Django / SQLAlchemy / Laravel) — single file, zero required dependencies"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
authors = [{ name = "tas6" }]
keywords = ["erd", "er-diagram", "database", "schema", "mysql", "postgresql", "postgres", "sqlite", "rails", "prisma", "django", "sqlalchemy", "laravel", "documentation"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Topic :: Database",
  "Topic :: Documentation",
  "Topic :: Software Development :: Documentation",
]

[project.optional-dependencies]
mysql = ["PyMySQL"]
postgres = ["psycopg[binary]"]
yaml = ["PyYAML"]
all = ["PyMySQL", "psycopg[binary]", "PyYAML"]

[project.scripts]
erdscope = "erd:main"

[project.urls]
Homepage = "https://github.com/orapli/erdscope"
Documentation = "https://orapli.github.io/erdscope/manual.html"
"Live demo" = "https://orapli.github.io/erdscope/"
Repository = "https://github.com/orapli/erdscope"
Issues = "https://github.com/orapli/erdscope/issues"

[tool.setuptools]
py-modules = ["erd"]
